--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 #All Variables Are Required
-BOT_TOKEN = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-FSUB_ID = ""
-DUMP_CHAT_ID = ""
+BOT_TOKEN = "7772911748:AAGMfH0sNYrgSiN1_18-vW4HhHEqF7c-5qE"
+TELEGRAM_API = "25373179"
+TELEGRAM_HASH = "e7cbea9f7469ee49c17ce48e2afd79b3"
+FSUB_ID = "-1002412649607"
+DUMP_CHAT_ID = "-1002334859504"
